--- a/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
@@ -66,7 +66,7 @@
                                     </c:if>
                                     <c:if test="#{clientMB.connecte}">
                                         <li class="navbar-li">
-                                            <h:link outcome="editerClient.xhtml">
+                                            <h:link outcome="clientActions.xhtml">
                                                 <h:outputText value="#{clientMB.client.email}" />
                                             </h:link>
                                         </li>
