--- a/web-party-equipment/web-party-equipment-war/web/editerAdresse.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/editerAdresse.xhtml
@@ -1,16 +1,107 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <body>
 
         <ui:composition template="./MainTemplate.xhtml">
 
             <ui:define name="content">
-                content
-            </ui:define>
+                <c:if test="#{!clientMB.connecte}">
+                    <f:event listener="#{clientMB.redirectionConnexion()}" 
+                             type="preRenderView"/>
+                </c:if>
+                <h:form id="formInscription">
+                    <div class=" row col-lg-12">
+                        <div id="adresseClient" class="col-md-offset-4 col-md-4">
+                            <h2 class="text-primary text-center">
+                                <h:outputText value="#{msg.monAdresse}"/>
+                            </h2>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">#{msg.formRue}</span>
+                                    <h:inputText id="rue" class="form-control"
+                                                 value="#{clientMB.nouvelleAdresse.rue}"
+                                                 required="true" requiredMessage="#{msg.rueRequis}"
+                                                 >
+                                        <f:ajax render="erreurRue" event="blur"/>                            
+                                    </h:inputText>
+                                </div>
 
+                                <span class="text-warning">
+                                    <h:message id="erreurRue" for="rue"/>
+                                </span>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">#{msg.formNumero}</span>
+                                    <h:inputText id="numero" class="form-control"
+                                                 value="#{clientMB.nouvelleAdresse.numero}"
+                                                 required="true" requiredMessage="#{msg.numeroRueRequis}"
+                                                 >
+                                        <f:ajax render="erreurNumero" event="blur"/>                            
+                                    </h:inputText>
+                                </div>
+                                <span class="text-warning">
+                                    <h:message id="erreurNumero" for="numero"/>
+                                </span>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">#{msg.formLocalite}</span>
+                                    <h:inputText id="localite" class="form-control"
+                                                 value="#{clientMB.nouvelleAdresse.localite}"
+                                                 required="true" requiredMessage="#{msg.localiteRequis}"
+                                                 validatorMessage="#{msg.localiteCaracteresAutorises}" >
+                                        <f:validateRegex pattern="^[a-zA-z-]+$"/>
+                                        <f:ajax render="erreurLocalite" event="blur"/>                            
+                                    </h:inputText>                                    
+                                </div>
+
+                                <span class="text-warning">
+                                    <h:message id="erreurLocalite" for="localite"/>
+                                </span>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">#{msg.formCodePostal}</span>
+                                    <h:inputText id="codePostal" class="form-control"
+                                                 value="#{clientMB.nouvelleAdresse.codepostal}"
+                                                 required="true" requiredMessage="#{msg.codePostalRequis}">
+                                        <f:ajax render="erreuCodePostal" event="blur"/>   
+                                    </h:inputText>
+                                </div>
+                                <span class="text-warning">
+                                    <h:message id="erreuCodePostal" for="codePostal"/>
+                                </span>
+
+                            </div>
+                            <div class="input-group col-lg-12">
+                                <h:outputLabel for="pays" value="#{msg.formPays}"/>
+                                <h:selectOneMenu id="pays" class="form-control"
+                                                 value="#{clientMB.nouvelleAdresse.idPays}">
+                                    <f:selectItems value="#{paysMB.pays}"
+                                                   var="pays"
+                                                   itemValue="#{pays}"
+                                                   itemLabel="#{pays.getLibelle(internationalizationMB.langueCourante)}"/>
+                                </h:selectOneMenu>
+                            </div>
+                            <div class="mg-top-10 col-lg-12">
+                                <h:link class="btn btn-warning col-md-offset-2 col-md-4" outcome="clientActions.xhtml">
+                                    <h:outputText value="#{msg.annuler}"/>
+                                </h:link>
+                                <h:commandLink class="btn btn-success col-md-offset-1 col-md-4" action="#{clientMB.changerAdresse()}">
+                                    <h:outputText value="#{msg.boutonValider}"/>
+                                </h:commandLink>
+                            </div>
+                        </div>
+                    </div>
+                </h:form>
+            </ui:define>
         </ui:composition>
 
     </body>
