--- a/web-party-equipment/web-party-equipment-war/web/article.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/article.xhtml
@@ -43,7 +43,7 @@
                                     <p:spinner id="quantiteArticle" size="6" min="1" max="999" value="#{articleMB.quantiteArticle}"></p:spinner>
                                 </p>
                                 <h:commandLink id="ajouterAuPanier"
-                                               class="btn btn-primary"
+                                               class="btn btn-info"
                                                action="#{panierMB.addArticle(articleMB.findArticleParId(articleMB.idArt), articleMB.quantiteArticle)}">
                                     <i class="fa fa-plus"/> 
                                     <h:outputText value=" #{msg.boutonAjoutPanier}"/>
