Password change and account delete

--- a/web-party-equipment/web-party-equipment-war/web/clientActions.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/clientActions.xhtml
@@ -111,7 +111,7 @@
                         <h:link class="btn btn-info" outcome="editerMotDePasse.xhtml">
                             <h:outputText value="#{msg.editerPassword}"/>
                         </h:link><br/>
-                        <h:link class="mg-top-10 btn btn-danger" outcome="listeFacture.xhtml">
+                        <h:link class="mg-top-10 btn btn-warning" outcome="listeFacture.xhtml">
                             <h:outputText value="#{msg.mesFactures}"/>
                         </h:link>
                         <h:form>
