--- a/web-party-equipment/web-party-equipment-war/web/editerMotDePasse.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/editerMotDePasse.xhtml
@@ -1,14 +1,81 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <body>
 
         <ui:composition template="./MainTemplate.xhtml">
 
             <ui:define name="content">
-                content
+                <c:if test="#{!clientMB.connecte}">
+                    <f:event listener="#{clientMB.redirectionConnexion()}" 
+                             type="preRenderView"/>
+                </c:if>
+                <h2 class="text-center text-primary">
+                    #{msg.editerPassword}
+                </h2>
+                <div class="mg-top-10 col-md-offset-4 col-md-4">
+                    <h:form>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">#{msg.newPassword}</span>
+                                <h:inputSecret id="motDePasse" class="form-control"
+                                               value="#{clientMB.nouveauMotDePasse}"
+                                               maxlength="50" required="true"
+                                               binding="#{composantMotDePasse}"
+                                               requiredMessage="#{msg.motDePasseRequis}"
+                                               validatorMessage="#{msg.longueurMotDePasse}">
+                                    <f:validateLength minimum="6" maximum="50" /> 
+                                    <f:ajax execute="motDePasse confirmationMotDePasse"
+                                            render="erreurMotDePasse erreurConfirmationMotDePasse"
+                                            event="blur"/>
+                                </h:inputSecret></div>
+                            <span class="text-warning">
+                                <h:message id="erreurMotDePasse" for="motDePasse"/>
+                            </span>
+
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">#{msg.formConfirmationMotDePasse}</span>
+                                <h:inputSecret id="confirmationMotDePasse" class="form-control"
+                                               maxlength="50" required="true"
+                                               requiredMessage="#{msg.confirmationMotDePasseRequis}"> 
+                                    <f:ajax render="erreurConfirmationMotDePasse"
+                                            event="blur"/>   
+                                    <f:attribute name="composantMotDePasse"
+                                                 value="#{composantMotDePasse}"/>
+                                    <f:validator validatorId="confirmationMotDePasseValidator"/>
+                                </h:inputSecret></div>
+                            <span class="text-warning">
+                                <h:message id="erreurConfirmationMotDePasse" for="confirmationMotDePasse"/>
+                            </span>
+
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">#{msg.oldPassword}</span>
+                                <h:inputSecret id="oldMotDePasse" class="form-control"
+                                               value="#{clientMB.motDePasse}"
+                                               maxlength="50" required="true"
+                                               requiredMessage="#{msg.confirmationMotDePasseRequis}"> 
+                                </h:inputSecret></div>
+                            <span class="text-warning">
+                                <h:message id="erreurOldMotDePasse" for="oldMotDePasse"/>
+                            </span>
+
+                        </div>
+                        <div class="col-lg-12 center-block">                           
+                            <h:commandButton class="btn btn-primary center-block" value="#{msg.boutonValider}"
+                                             action="#{clientMB.changerMotDePasse()}"/>
+                        </div>
+
+                    </h:form>
+                </div>
             </ui:define>
 
         </ui:composition>
