Icon changes for navbar

--- a/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/MainTemplate.xhtml
@@ -42,7 +42,7 @@
                                         </h:link>
                                     </li>
                                     <li class="dropdown navbar-li">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">#{msg.titreCategories}  <i class="fa fa-caret-square-o-down"/></a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">#{msg.titreCategories}  <i class="fa fa-chevron-down"/></a>
                                         <ul class="dropdown-menu">
                                             <c:forEach items="#{categorieMB.categories}" var="categorie">
                                                 <li>
@@ -116,7 +116,7 @@
                                         </h:link>
                                     </li>
                                     <li class="dropdown navbar-li">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">#{msg.languesTitre} <i class="fa fa-caret-square-o-down"/></a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">#{msg.languesTitre} <i class="fa fa-chevron-down"/></a>
                                         <ul class="dropdown-menu">
                                             <c:forEach items="#{internationalizationMB.langues}" var="langue">
                                                 <li>
