--- a/web-party-equipment/web-party-equipment-war/web/index.xhtml
+++ b/web-party-equipment/web-party-equipment-war/web/index.xhtml
@@ -16,6 +16,7 @@
             <ui:define name="content">
                 <div id="promotions" class="row col-md-12">
                     <div class="col-md-offset-3 col-lg-6">
+                        <h1 class="text-center text-danger">Party Equipment</h1>
                         <c:set var="amountOfPromos" value="#{promotionMB.promotions.size()}"/>
                         <c:if test="${amountOfPromos != 0}">
                             <h2 class="text-primary">
@@ -25,7 +26,8 @@
                         
                     
                         <c:forEach items="#{promotionMB.promotions}" var="promotion">
-                            <h:link outcome="article.xhtml"
+                            <div class="row col-md-12 mg-top-10">
+                                <h:link outcome="article.xhtml"
                                 class="classe_promo">
                                 <f:param name="articleID"
                                          value="#{promotion.idArticle.idArticle}"/>
@@ -40,6 +42,7 @@
                                 </h:outputText>
                             |
                             <h:outputText value="#{promotion.codepromo}"/>
+                            </div>
                         </c:forEach>
                     </div>
                 </div>
